--- a/app/globals.css
+++ b/app/globals.css
@@ -113,7 +113,7 @@
 
 @layer components {
   .loginInput {
-    @apply border border-neutral-400 px-5 h-12 focus-visible:ring-0 placeholder:text-neutral-400 rounded-sm;
+    @apply border border-neutral-400 px-5 h-12 focus-visible:ring-0 placeholder:text-neutral-400 rounded-[8px];
   }
 
   .registerInput {
